<resources>

    <!-- General -->
    <string name="app_name">zitat-quiz</string>

    <!-- MainActivity -->
    <string name="btnCategoryActivity">Start</string>
    <string name="txtWelcome">Willkommen zum Zitatquiz!</string>

    <!-- CategoryActivity -->
    <string name="txtCategoryHeadline">Wählen Sie eine Kategorie:</string>
    <string name="btnCategoryMovies">Film</string>
    <string name="btnCategoryPolitics">Politik</string>
    <string name="btnCategoryScience">Wissenschaft</string>
    <string name="btnCategorySports">Sport</string>
    <string name="btnCategoryTelevision">Fernsehen</string>
    <string name="btnCategoryTime">Zeitmodus</string>
    <string name="btnCategoryEverything">Alle Kategorien</string>

    <!-- QuizActivity -->
    <string name="btnNextQuestion">Weiter</string>
    <string name="txtDefaultQuestionText">Question</string>
    <string name="txtDefaultAnswerText">Answer</string>

    <!-- ResultActivity -->
    <string name="txtResult">Result</string>
    <string name="btnReturnToCategories">Zurück zur Kategorieauswahl</string>

</resources>
